fix body overflow crossbrowser issue

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,6 +4,7 @@
 
 body {
   background-color: $lightest;
+  overflow-x: hidden;
 }
 
 .body--overflow--hidden {
