--- a/www/css/main.css
+++ b/www/css/main.css
@@ -147,7 +147,8 @@ body {
     font-size: 0; }
 
 body {
-  background-color: white; }
+  background-color: white;
+  overflow-x: hidden; }
 
 .body--overflow--hidden {
   width: 100vw;
